--- a/templates/index.html
+++ b/templates/index.html
@@ -10,18 +10,26 @@
 {% endblock %}
 
 {% block content %}
-<h1>Projekty i doświadczenie.</h1>
-<p>Jestem programistą, który lubi tworzyć nowe rzeczy i rozwiązać problemy.</p>
-<p>Pracuję w przemyśle od 2018 roku.</p>
-<p>Przez lata nabrałem doświadczenia w wielu branżach, takich jak:</p>
+<h1>Oferta</h1>
+<p>Oferuję profesjonalne usługi w zakresie automatyki przemysłowej, łącząc doświadczenie z nowoczesnymi technologiami. Od 2018 roku realizuję projekty w następujących branżach:</p>
 <p>
 <ul class="text-list">
-    <li>Atomizacja materiałów, atomizery</li>
-    <li>Automatyczne magazyny</li>
-    <li>Wytłaczarki, butelczarki PP i PE</li>
-    <li>Obóbka stali, wierarki automatyczne, zgrzewarki</li>
+    <li>Atomizacja materiałów i systemy atomizerów</li>
+    <li>Systemy automatycznych magazynów</li>
+    <li>Automatyzacja produkcji opakowań PP i PE:</li>
+    <ul class="text-list">
+        <li>Systemy wytłaczania</li>
+        <li>Systemy kontroli szczelności</li>
+        <li>Zautomatyzowane linie detaberów i demoilerów</li>
+    </ul>
+    <li>Zaawansowana obróbka stali:</li>
+    <ul class="text-list">
+        <li>Systemy zgrzewania</li>
+        <li>Zautomatyzowane systemy wiertarskie</li>
+        <li>Linie giętarek przemysłowych</li>
+    </ul>
 </ul>
 </p>
-<p>Od zawsze interesują mnie ciakawostki programistyczne i nowe technologie, dlatego w swoich aplikacjach miałem szanse wykorzystywać modele analizujące obraz czy modele językowe.</p>
-<p>Pracuję korzystając z benefitów systemów PLC oraz technologi IT. Co pozwala mi szukać optymalizacji rozwiązań i kosztów w trudnych aplikacjach.</p>
+<p>Specjalizuję się w implementacji innowacyjnych rozwiązań, wykorzystując zaawansowane technologie, takie jak systemy wizyjne oraz modele AI w automatyce przemysłowej.</p>
+<p>Łączę kompetencje z zakresu systemów PLC oraz technologii IT, co pozwala na tworzenie zoptymalizowanych, efektywnych kosztowo rozwiązań dla najbardziej wymagających aplikacji przemysłowych.</p>
 {% endblock %} 
