--- a/templates/production.html
+++ b/templates/production.html
@@ -14,18 +14,18 @@
 
 <div class="projects-grid">
     <div class="project-card">
-        <img src="static/img/rePowder.png" alt="Automatyczny Atomizer ultradzwiękowy rePowder">
         <h3>Automatyczny Atomizer ultradzwiękowy rePowder</h3>
+        <img src="static/img/rePowder.png" alt="Automatyczny Atomizer ultradzwiękowy rePowder">
         <ul>
-            <li>Translacja kodu C++ na framework Arduino i platformie Controlino na sterownik Beckhoff IEC 1131-3 Język ST (ang. Structural Text)</li>
-            <li>Wykonanie projektu HMI Weintek według nowego designu</li>
+            <li>Translacja kodu C++ zbudowanego na framework Arduino i platformie Controlino na sterownik Beckhoff IEC 1131-3 Język ST (ang. Structural Text)</li>
+            <li>Wykonanie projektu HMI Weintek według nowego design</li>
             <li>Automatyzacja urządzenia z wykorzystaniem modeli analizy obrazu i dużych modeli językowych</li>
             <li>Prowadzenie projektu automatyzacji urządzenia</li>
         </ul>
     </div>
     <div class="project-card">
-        <img src="static/img/inFurner.png" alt="Piec próżniowy inFurner">
         <h3>Piec próżniowy inFurner</h3>
+        <img src="static/img/inFurner.png" alt="Piec próżniowy inFurner">
         <ul>
             <li>Translacja kodu C++ na framework Arduino i platformie Controlino na sterownik Beckhoff IEC 1131-3 Język ST (ang. Structural Text)</li>
             <li>Rozwinięcie funkcjonalności pieca próżniowego</li>
@@ -33,8 +33,8 @@
         </ul>
     </div>
     <div class="project-card">
-        <img src="static/img/manipulator_xyz.png" alt="Manipulator XYZ">
         <h3>Manipulator XYZ</h3>
+        <img src="static/img/manipulator_xyz.png" alt="Manipulator XYZ">
         <ul>
             <li>Pomysł i prowadzenie projektu manipulatora XYZ</li>
             <li>Sterowanie manipulatora z wykorzystaniem kontrolera xbox</li>
@@ -45,14 +45,14 @@
     </div>
 
     <div class="project-card">
-        <img src="static/img/zgrzewarka.jpeg" alt="Zgrzewarka wielopunktowa do paneli ogrodzeniowych">
         <h3>Zgrzewarka wielopunktowa do paneli ogrodzeniowych</h3>
+        <img src="static/img/zgrzewarka.jpeg" alt="Zgrzewarka wielopunktowa do paneli ogrodzeniowych">
         <p>Wymiana sterowania zgrzewarki wielopunktowej i napisanie oprogramowania na sterowniku Mitsubishi FX5U na podstawie grafu blokowego</p>
     </div>
 
     <div class="project-card">
-        <img src="static/img/tornado.png" alt="Tester szczelności">
         <h3>Tester szczelności</h3>
+        <img src="static/img/tornado.png" alt="Tester szczelności">
         <ul>
             <li>Rozwijanie oprogramowania testera szczelności</li>
             <li>Funkcja wykrywania kolizji na podstawie momentu obrotowego</li>
@@ -61,8 +61,8 @@
     </div>
     
     <div class="project-card">
-        <img src="static/img/mega.jpg" alt="Wytłaczarka do butelek PP" style="width: 60%; height: auto;">
         <h3>Wytłaczarka do butelek PP Graham VR</h3>
+        <img src="static/img/mega.jpg" alt="Wytłaczarka do butelek PP">
         <ul>
             <li>Utrzymanie i rozwijanie oprogramowania wytłaczarki do butelek PP Graham VR</li>
             <li>Rozwijanie funkcjonalności lini odbioru butelek opartej na serwach indeksujących butelki</li>
