--- a/templates/services.html
+++ b/templates/services.html
@@ -14,39 +14,80 @@
 
 <div class="projects-grid">
     <div class="project-card">
-        <img src="static/img/modernizacja.png" alt="Modernizacja Maszyn" style="width: 100%; height: auto;">
         <h3>Modernizacja Maszyn</h3>
-        <p>Kompleksowa modernizacja i automatyzacja istniejących maszyn przemysłowych</p>
+        <img src="static/img/modernizacja_maszyn.jpg" alt="Modernizacja Maszyn" style="width: 100%; height: auto;">
+        <ul>
+            <li>Wymiana starych systemów sterowania na nowoczesne sterowniki PLC</li>
+            <li>Integracja nowych czujników i systemów bezpieczeństwa</li>
+            <li>Optymalizacja procesów produkcyjnych poprzez automatyzację</li>
+            <li>Modernizacja napędów i systemów ruchu</li>
+            <li>Implementacja systemów wizyjnych i kontroli jakości</li>
+            <li>Dostosowanie maszyn do aktualnych norm bezpieczeństwa</li>
+        </ul>
     </div>
 
     <div class="project-card">
-        <img src="static/img/wsparcie.png" alt="Wsparcie w przemyśle" style="width: 100%; height: auto;">
         <h3>Wsparcie w przemyśle</h3>
-        <p>Profesjonalne wsparcie techniczne i konsultacje w zakresie automatyzacji przemysłowej</p>
+        <img src="static/img/wsparcie.jpg" alt="Wsparcie w przemyśle" style="width: 100%; height: auto;">
+        <ul>
+            <li>Audyt i optymalizacja istniejących systemów automatyki</li>
+            <li>Wsparcie przy wdrażaniu nowych technologii</li>
+            <li>Diagnostyka i rozwiązywanie problemów</li>
+            <li>Doradztwo w zakresie doboru komponentów automatyki</li>
+            <li>Pomoc przy integracji różnych systemów sterowania</li>
+        </ul>
     </div>
 
     <div class="project-card">
-        <img src="static/img/aplikacje.png" alt="Aplikacje Dla firm" style="width: 100%; height: auto;">
         <h3>Aplikacje Dla firm</h3>
-        <p>Tworzenie dedykowanych aplikacji przemysłowych i systemów sterowania</p>
+        <img src="static/img/aplikacje.jpg" alt="Aplikacje Dla firm" style="width: 100%; height: auto;">
+        <ul>
+            <li>Tworzenie dedykowanych aplikacji przemysłowych i systemów sterowania</li>
+            <li>Projektowanie i implementacja interfejsów HMI</li>
+            <li>Systemy raportowania i analizy danych produkcyjnych</li>
+            <li>Integracja systemów z bazami danych</li>
+            <li>Aplikacje do monitorowania procesów w czasie rzeczywistym</li>
+            <li>Rozwiązania wykorzystujące sztuczną inteligencję i uczenie maszynowe</li>
+        </ul>
     </div>
 
     <div class="project-card">
-        <img src="static/img/produkcja.png" alt="Produkcja maszyn" style="width: 100%; height: auto;">
         <h3>Produkcja maszyn</h3>
-        <p>Projektowanie i produkcja zautomatyzowanych maszyn na zamówienie</p>
+        <img src="static/img/budowa_maszyn.jpg" alt="Produkcja maszyn" style="width: 100%; height: auto;">
+        <ul>
+            <li>Kompleksowa realizacja projektów od koncepcji po wdrożenie</li>
+            <li>Projektowanie i budowa maszyn specjalnego przeznaczenia</li>
+            <li>Integracja systemów wizyjnych i kontroli jakości</li>
+            <li>Implementacja zaawansowanych algorytmów sterowania</li>
+            <li>Zgodność z normami bezpieczeństwa i standardami przemysłowymi</li>
+            <li>Dokumentacja techniczna i szkolenia dla operatorów</li>
+        </ul>
     </div>
 
     <div class="project-card">
-        <img src="static/img/lakiernia.png" alt="Lakiernia" style="width: 100%; height: auto;">
         <h3>Lakiernia</h3>
-        <p>Automatyzacja procesów lakierniczych i systemów malowania przemysłowego</p>
+        <img src="static/img/lakiernia.jpg" alt="Lakiernia" style="width: 100%; height: auto;">
+        <ul>
+            <li>Profesjonalne usługi lakierowania przemysłowego</li>
+            <li>Malowanie proszkowe elementów metalowych</li>
+            <li>Lakierowanie mokre różnymi typami farb</li>
+            <li>Przygotowanie powierzchni przed malowaniem</li>
+            <li>Zabezpieczenia antykorozyjne</li>
+            <li>Malowanie dekoracyjne i specjalistyczne powłoki</li>
+        </ul>
     </div>
 
     <div class="project-card">
-        <img src="static/img/solidworks.png" alt="Konstrukcja" style="width: 100%; height: auto;">
         <h3>Konstrukcja</h3>
-        <p>Projektowanie i wykonawstwo konstrukcji mechanicznych oraz systemów automatyki</p>
+        <img src="static/img/konstrukcja.jpg" alt="Konstrukcja" style="width: 100%; height: auto;">
+        <ul>
+            <li>Projektowanie konstrukcji mechanicznych w środowisku SolidWorks</li>
+            <li>Wykonawstwo elementów konstrukcyjnych</li>
+            <li>Integracja systemów automatyki z konstrukcją mechaniczną</li>
+            <li>Optymalizacja konstrukcji pod kątem funkcjonalności i kosztów</li>
+            <li>Dobór materiałów i technologii wykonania</li>
+            <li>Przygotowanie dokumentacji technicznej</li>
+        </ul>
     </div>
 </div>
 {% endblock %}
