--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -15,9 +15,9 @@
 
 <div class="projects-grid">
     <div class="project-card">
-        <img src="static/img/beckhoff.png" alt="beckhoff" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
-        <img src="static/img/gx_works.png" alt="gx_works" style="width: 80%; height: auto;">
         <h3>PLC</h3>
+        <img src="static/img/beckhoff.png" alt="beckhoff">
+        <img src="static/img/gx_works.png" alt="gx_works">
         <ul>
             <li>6 lat doświadczenia w różnych branżach i różnych typach sterowników</li>
             <li>Beckhoff</li>
@@ -26,11 +26,11 @@
         </ul>
     </div>
     <div class="project-card">
-        <div>
-            <img src="static/img/weintek.png" alt="PLC" style="width: 48%; height: auto;">
-            <img src="static/img/indusoft.png" alt="PLC" style="width: 48%; height: auto;">
-        </div>
         <h3>HMI</h3>
+        <div>
+            <img src="static/img/weintek.png" alt="Weintek">
+            <img src="static/img/indusoft.png" alt="Indusoft">
+        </div>
         <ul>
             <li>Tradycyjne HMi</li>
             <li>Scada</li>
@@ -38,8 +38,8 @@
         </ul>
     </div>
     <div class="project-card">
-        <img src="static/img/ultralytics.png" alt="Vision">
         <h3>Vision</h3>
+        <img src="static/img/ultralytics.png" alt="Vision">
         <ul>
             <li>Systemy wizyjne i przetwarzanie obrazu w zastosowaniach przemysłowych</li>
             <li>Ultralytics</li>
@@ -49,9 +49,11 @@
         </ul>
     </div>
     <div class="project-card">
-        <img src="static/img/pyTorch.png" alt="Machine Learning">
-        <img src="static/img/python.png" alt="Machine Learning">
         <h3>Machine Learning</h3>
+        <div>
+            <img src="static/img/pyTorch.png" alt="Machine Learning" >
+            <img src="static/img/python.png" alt="Machine Learning" >
+        </div>
         <ul>
             <li>Implementacja modelu LSTM do przerwidywania zużycia przetworników ultradzwiękowych</li>
             <li>Analiza dużych zbiorów danych w celu wykrycia prawidłowości w trudnych procesach</li>
@@ -59,8 +61,8 @@
         </ul>
     </div>
     <div class="project-card">
-        <img src="static/img/llama.jpeg" alt="LLM">
         <h3>Large Language Models</h3>
+        <img src="static/img/llama.jpeg" alt="LLM">
         <ul>
             <li>Wykorzystanie modeli językowych w automatyzacji i optymalizacji procesów</li>
             <li>Przyuczanie lokalnych LLM do funkcji Asystent operatora</li>
@@ -68,8 +70,8 @@
         </ul>
     </div>
     <div class="project-card">
-        <img src="static/img/csharp.png" alt="Embeded Systems">
         <h3>Aplikacje desktopowe</h3>
+        <img src="static/img/csharp.png" alt="Embeded Systems">
         <ul>
             <li>Tworzenie dedykowanych aplikacji desktopowych dla przemysłu</li>
             <li>korzystanie z C#, WPF, .net maui dla realizacji aplikacji desktopowych</li>
@@ -77,8 +79,8 @@
         </ul>
     </div>
     <div class="project-card">
-        <img src="static/img/kuka.png" alt="kuka" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
         <h3>Robotics</h3>
+        <img src="static/img/kuka.png" alt="kuka" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
         <ul>
             <li>Programowanie robotów przemysłowych i automatyzacja manipulacji</li>
             <li>Pierwsze uruchomienia robotów KUKA</li>
@@ -86,8 +88,8 @@
         </ul>
     </div>    
     <div class="project-card">
-        <img src="static/img/cplusplus.png" alt="Aplikacje desktopowe">
         <h3>Systemy wbudowane</h3>
+        <img src="static/img/cplusplus.png" alt="Aplikacje desktopowe">
         <ul>
             <li>Programowanie systemów wbudowanych i mikrokontrolerów</li>
             <li>Programowanie w C/C++</li>
@@ -95,8 +97,8 @@
         </ul>
     </div>    
     <div class="project-card">
-        <img src="static/img/docker.png" alt="Aplikacje desktopowe">
         <h3>Dockeryzacja aplikacji</h3>
+        <img src="static/img/docker.png" alt="Aplikacje desktopowe">
         <p>Dockeryzacja aplikacji w celu zwiększenia elastyczności i skalowalności</p>
     </div>       
 </div>
