--- a/templates/production.html
+++ b/templates/production.html
@@ -2,13 +2,6 @@
 
 {% block title %}Realizacje{% endblock %}
 
-{% block nav_menu %}
-<a href="{{ url_for('index') }}">Strona główna</a>
-<a href="{{ url_for('technologies') }}">Technologie</a>
-<a href="{{ url_for('services') }}">Usługi</a>
-<a href="{{ url_for('experience') }}">Doświadczenie</a>
-{% endblock %}
-
 {% block content %}
 <h1>Moje Realizacje</h1>
 
@@ -16,6 +9,7 @@
     <div class="project-card">
         <h3>Automatyczny Atomizer ultradzwiękowy rePowder</h3>
         <img src="static/img/rePowder.png" alt="Automatyczny Atomizer ultradzwiękowy rePowder">
+        <a href="https://www.amazemet.com/" target="_blank">https://www.amazemet.com/</a>
         <ul>
             <li>Translacja kodu C++ zbudowanego na framework Arduino i platformie Controlino na sterownik Beckhoff IEC 1131-3 Język ST (ang. Structural Text)</li>
             <li>Wykonanie projektu HMI Weintek według nowego design</li>
@@ -26,6 +20,7 @@
     <div class="project-card">
         <h3>Piec próżniowy inFurner</h3>
         <img src="static/img/inFurner.png" alt="Piec próżniowy inFurner">
+        <a href="https://www.amazemet.com/" target="_blank">https://www.amazemet.com/</a>
         <ul>
             <li>Translacja kodu C++ na framework Arduino i platformie Controlino na sterownik Beckhoff IEC 1131-3 Język ST (ang. Structural Text)</li>
             <li>Rozwinięcie funkcjonalności pieca próżniowego</li>
@@ -35,6 +30,7 @@
     <div class="project-card">
         <h3>Manipulator XYZ</h3>
         <img src="static/img/manipulator_xyz.png" alt="Manipulator XYZ">
+        <a href="https://www.amazemet.com/" target="_blank">https://www.amazemet.com/</a>
         <ul>
             <li>Pomysł i prowadzenie projektu manipulatora XYZ</li>
             <li>Sterowanie manipulatora z wykorzystaniem kontrolera xbox</li>
