--- a/templates/services.html
+++ b/templates/services.html
@@ -2,13 +2,6 @@
 
 {% block title %}Usługi{% endblock %}
 
-{% block nav_menu %}
-<a href="{{ url_for('production') }}">Realizacje</a>
-<a href="{{ url_for('technologies') }}">Technologie</a>
-<a href="{{ url_for('index') }}">Strona główna</a>
-<a href="{{ url_for('experience') }}">Doświadczenie</a>
-{% endblock %}
-
 {% block content %}
 <h1>Usługi</h1>
 
@@ -65,7 +58,7 @@
     </div>
 
     <div class="project-card">
-        <h3>Lakiernia</h3>
+        <h3>Lakiernia Proszkowa</h3>
         <img src="static/img/lakiernia.jpg" alt="Lakiernia" style="width: 100%; height: auto;">
         <ul>
             <li>Profesjonalne usługi lakierowania przemysłowego</li>
@@ -78,7 +71,7 @@
     </div>
 
     <div class="project-card">
-        <h3>Konstrukcja</h3>
+        <h3>Konstrukcja Maszyn</h3>
         <img src="static/img/konstrukcja.jpg" alt="Konstrukcja" style="width: 100%; height: auto;">
         <ul>
             <li>Projektowanie konstrukcji mechanicznych w środowisku SolidWorks</li>
