--- a/templates/production.html
+++ b/templates/production.html
@@ -30,7 +30,7 @@
     <div class="project-card">
         <h3>Manipulator XYZ</h3>
         <img src="static/img/manipulator_xyz.png" alt="Manipulator XYZ">
-        <a href="https://www.amazemet.com/" target="_blank">https://www.amazemet.com/</a>
+        <!-- <a href="https://www.amazemet.com/" target="_blank">https://www.amazemet.com/</a> -->
         <ul>
             <li>Pomysł i prowadzenie projektu manipulatora XYZ</li>
             <li>Sterowanie manipulatora z wykorzystaniem kontrolera xbox</li>
@@ -68,4 +68,6 @@
     </div>
     
 </div>
+
+<div id="left_column_content"></div>
 {% endblock %}
