--- a/static/styles.css
+++ b/static/styles.css
@@ -166,6 +166,14 @@ nav {
     z-index: 10;
 }
 
+.project-card.selected {
+    transform: translateY(-50px);
+    position: relative;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+    width: 100%;
+    height: 400px;
+    z-index: 10;
+}
 
 .project-card img {
     position: sticky;
@@ -221,6 +229,12 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    img {
+        width: 48%;
+        height: auto;
+        top: 0;
+        transition: all 0.3s ease;
+    }
 }
 
 .project-card:hover div {
@@ -297,6 +311,7 @@ nav {
     color: white;
     text-align: left;
     vertical-align: top;
+    font-size: 2rem;
 }
 .right-column {
     background-color: white;
